--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -1324,8 +1324,9 @@
         "resultstablebuttons = {\"Download\": downloadbtn}\n",
         "\n",
         "imdbresultstableformatters = {}\n",
-        "imdbresultstablecolumnwidths={\"Title\":'21%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '15%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '7%', \" \": '5%'}\n",
-        "imdbresultstablecolumnalignments={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \"Watched\": 'center', \" \": \"center\"}\n",
+        "imdbresultstablesorters = [{'field': 'Downloaded', 'dir': 'desc'},]\n",
+        "imdbresultstablecolumnwidths ={\"Title\":'21%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '15%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '7%', \" \": '5%'}\n",
+        "imdbresultstablecolumnalignments ={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \"Watched\": 'center', \" \": \"center\"}\n",
         "\n",
         "icon_css = \"\"\"background: url( \"data:image/svg+xml,%3Csvg%20id%3D%22download-svg%22%20width%3D%2225px%22%20height%3D%2225px%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20opacity%3D%220.5%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M3%2014.25C3.41421%2014.25%203.75%2014.5858%203.75%2015C3.75%2016.4354%203.75159%2017.4365%203.85315%2018.1919C3.9518%2018.9257%204.13225%2019.3142%204.40901%2019.591C4.68577%2019.8678%205.07435%2020.0482%205.80812%2020.1469C6.56347%2020.2484%207.56459%2020.25%209%2020.25H15C16.4354%2020.25%2017.4365%2020.2484%2018.1919%2020.1469C18.9257%2020.0482%2019.3142%2019.8678%2019.591%2019.591C19.8678%2019.3142%2020.0482%2018.9257%2020.1469%2018.1919C20.2484%2017.4365%2020.25%2016.4354%2020.25%2015C20.25%2014.5858%2020.5858%2014.25%2021%2014.25C21.4142%2014.25%2021.75%2014.5858%2021.75%2015V15.0549C21.75%2016.4225%2021.75%2017.5248%2021.6335%2018.3918C21.5125%2019.2919%2021.2536%2020.0497%2020.6517%2020.6516C20.0497%2021.2536%2019.2919%2021.5125%2018.3918%2021.6335C17.5248%2021.75%2016.4225%2021.75%2015.0549%2021.75H8.94513C7.57754%2021.75%206.47522%2021.75%205.60825%2021.6335C4.70814%2021.5125%203.95027%2021.2536%203.34835%2020.6517C2.74643%2020.0497%202.48754%2019.2919%202.36652%2018.3918C2.24996%2017.5248%202.24998%2016.4225%202.25%2015.0549C2.25%2015.0366%202.25%2015.0183%202.25%2015C2.25%2014.5858%202.58579%2014.25%203%2014.25Z%22%20fill%3D%22%231C274C%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M12%2016.75C12.2106%2016.75%2012.4114%2016.6615%2012.5535%2016.5061L16.5535%2012.1311C16.833%2011.8254%2016.8118%2011.351%2016.5061%2011.0715C16.2004%2010.792%2015.726%2010.8132%2015.4465%2011.1189L12.75%2014.0682V3C12.75%202.58579%2012.4142%202.25%2012%202.25C11.5858%202.25%2011.25%202.58579%2011.25%203V14.0682L8.55353%2011.1189C8.27403%2010.8132%207.79963%2010.792%207.49393%2011.0715C7.18823%2011.351%207.16698%2011.8254%207.44648%2012.1311L11.4465%2016.5061C11.5886%2016.6615%2011.7894%2016.75%2012%2016.75Z%22%20fill%3D%22%231C274C%22%2F%3E%3C%2Fsvg%3E\" );\"\"\"\n",
         "download_css = \"\"\"  font-size: 20px;\n",
@@ -1359,20 +1360,20 @@
         "    pageresultcount = 0\n",
         "    table: panel.widgets.Tabulator = None\n",
         "    tableoutput: Output = None\n",
-        "    resultstablecolumnwidths = None\n",
-        "    resultstablecolumnalignments = None\n",
-        "    resultstableformatters = None\n",
         "    pagination_handler = None\n",
         "    pagination_container: HBox = None\n",
         "    resultscount = 0\n",
         "    site = ''\n",
         "    tab = None\n",
         "    resultpages = None\n",
-        "    sorters = None\n",
+        "\n",
         "    def actionhandler(self, e):\n",
         "        pass\n",
         "\n",
         "    def getdataframe(self):\n",
+        "        pass\n",
+        "\n",
+        "    def getresultstable(self):\n",
         "        pass\n",
         "\n",
         "    def applytablestyle(self):\n",
@@ -1381,10 +1382,6 @@
         "class IMDBResult(WebResult): #obj values used in class attribute definitions should be defined before, in function/methods it shouldn't.\n",
         "    def __init__(self) -> None:\n",
         "        super().__init__()\n",
-        "        self.resultstablecolumnwidths = imdbresultstablecolumnwidths\n",
-        "        self.resultstablecolumnalignments = imdbresultstablecolumnalignments\n",
-        "        self.resultstableformatters = imdbresultstableformatters\n",
-        "        self.sorters = [{'field': 'Downloaded', 'dir': 'desc'},]\n",
         "        self.tab = nav[IMDB_TAB]\n",
         "        self.site = IMDB\n",
         "        self.downloadedtitlespages = dict()\n",
@@ -1420,7 +1417,27 @@
         "            resulttablesource['Watched'].append(\"Watched\" if result.watched else \"\")\n",
         "            resulttablesource[' '].append(' ⤓ ')\n",
         "        return pd.DataFrame(resulttablesource)\n",
-        "    \n",
+        "\n",
+        "    def getresultstable(self):\n",
+        "        dataframe = self.getdataframe()\n",
+        "        self.table: panel.widgets.Tabulator = panel.widgets.Tabulator(dataframe,\n",
+        "                                                disabled= True,\n",
+        "                                                sizing_mode= 'stretch_width',\n",
+        "                                                widths= imdbresultstablecolumnwidths,\n",
+        "                                                header_align='center',\n",
+        "                                                text_align= imdbresultstablecolumnalignments,\n",
+        "                                                show_index= False, \n",
+        "                                                pagination= None,\n",
+        "                                                formatters= imdbresultstableformatters,\n",
+        "                                                sorters= imdbresultstablesorters,\n",
+        "                                                selectable='checkbox',\n",
+        "                                                configuration= {\n",
+        "                                                'rowHeight': 70,\n",
+        "                                                'columnDefaults': {'headerSort': True,}})\n",
+        "        self.applytablestyle()\n",
+        "        self.table.on_click(self.actionhandler)  \n",
+        "        return self.table  \n",
+        "\n",
         "    def applytablestyle(self):\n",
         "        #self.table.style.apply(lambda s : [\"color: #03ba00\" for i in range(len(s))], subset=['Seeders'])\n",
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
@@ -1439,9 +1456,6 @@
         "        self.previouspage = previouspage\n",
         "        self.sort = sort\n",
         "        self.results = results\n",
-        "        self.resultstablecolumnwidths = searchresultstablecolumnwidths\n",
-        "        self.resultstablecolumnalignments = searchresultstablecolumnalignments\n",
-        "        self.resultstableformatters = searchresultstableformatters\n",
         "        self.sorters = []\n",
         "        self.tab = nav[SEARCH_TAB]\n",
         "\n",
@@ -1462,6 +1476,24 @@
         "            resulttablesource[' '].append(' ⤓ ')\n",
         "        return pd.DataFrame(resulttablesource)\n",
         "    \n",
+        "    def getresultstable(self):\n",
+        "        dataframe = self.getdataframe()\n",
+        "        self.table: panel.widgets.Tabulator = panel.widgets.Tabulator(dataframe,\n",
+        "                                                disabled= True,\n",
+        "                                                sizing_mode= 'stretch_width',\n",
+        "                                                widths= searchresultstablecolumnwidths,\n",
+        "                                                header_align='center',\n",
+        "                                                text_align= searchresultstablecolumnalignments,\n",
+        "                                                show_index= False, \n",
+        "                                                pagination= None,\n",
+        "                                                formatters= searchresultstableformatters,\n",
+        "                                                configuration= {\n",
+        "                                                'rowHeight': 30,\n",
+        "                                                'columnDefaults': {'headerSort': False,}})\n",
+        "        self.applytablestyle()\n",
+        "        self.table.on_click(self.actionhandler)\n",
+        "        return self.table\n",
+        "       \n",
         "    def applytablestyle(self):\n",
         "        self.table.style.apply(lambda s : [\"color: #03ba00\" for i in range(len(s))], subset=['Seeders'])\n",
         "        self.table.style.apply(lambda s : [\"color: #d40404\" for i in range(len(s))], subset=[\"Leechers\"])\n",
@@ -5016,26 +5048,6 @@
         "    updateoutput(result.tableoutput, result.table)\n",
         "    switchview(result.tab)\n",
         "\n",
-        "def getsearchresulttable(result: WebResult):\n",
-        "    info(f\"Creating results table for {result.search}.\")\n",
-        "    dataframe = result.getdataframe()\n",
-        "    result.table: panel.widgets.Tabulator = panel.widgets.Tabulator(dataframe,\n",
-        "                                            disabled= True,\n",
-        "                                            sizing_mode= 'stretch_width',\n",
-        "                                            widths= result.resultstablecolumnwidths,\n",
-        "                                            header_align='center',\n",
-        "                                            text_align= result.resultstablecolumnalignments,\n",
-        "                                            show_index= False, \n",
-        "                                            pagination= None,\n",
-        "                                            formatters= result.resultstableformatters,\n",
-        "                                            sorters= result.sorters,\n",
-        "                                            configuration= {\n",
-        "                                            'rowHeight': 30,\n",
-        "                                            'columnDefaults': {'headerSort': True,}})\n",
-        "    result.applytablestyle()\n",
-        "    result.table.on_click(result.actionhandler)\n",
-        "    return result.table\n",
-        "\n",
         "def getpagination(result: WebResult):\n",
         "    info(f\"Creating pagination for search {result.search}.\")\n",
         "    currentpage_btn = Button(description= str(result.page), disabled= True, layout= pagebtn_layout)\n",
@@ -5072,7 +5084,7 @@
         "        pagination_hbox = HBox(pagination, layout= {'width': '300px', 'align_items':'center'})\n",
         "        row1 = HBox((searchtitle_html, pagination_hbox), layout= {\"height\": \"45px\", \"width\": \"100%\", \"align_items\": \"center\", 'padding': '0 0 0 40px'})\n",
         "\n",
-        "        getsearchresulttable(result)\n",
+        "        result.getresultstable()\n",
         "        resultsoutput = Output()\n",
         "        with resultsoutput:\n",
         "            display(result.table)\n",
